--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,65 +1,53 @@
----
 version: 2
 jobs:
-  node-latest: &test
+  build:
+    working_directory: ~/mern-starter
+    # The primary container is an instance of the first image listed. The job's commands run in this container.
     docker:
-      - image: node:latest
-    working_directory: ~/cli
+      - image: circleci/node:4.8.2-jessie
+      # The secondary container is an instance of the second listed image which is run in a common network where ports exposed on the primary container are available on localhost.
+      - image: mongo:3.4.4-jessie
     steps:
       - checkout
-      - restore_cache: &restore_cache
-          keys:
-            - v1-npm-{{checksum ".circleci/config.yml"}}-{{ checksum "package-lock.json"}}
-            - v1-npm-{{checksum ".circleci/config.yml"}}
       - run:
-          name: Install dependencies
-          command: .circleci/greenkeeper
-      - run: ./bin/run --version
-      - run: ./bin/run --help
+          name: Update npm
+          command: 'sudo npm install -g npm@latest'
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
-          name: Testing
+          name: Install npm wee
+          command: npm install
+      - save_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
+  test:
+    docker:
+      - image: circleci/node:4.8.2-jessie
+      - image: mongo:3.4.4-jessie
+    steps:
+      - checkout
+      - run:
+          name: Test
           command: npm test
       - run:
-          name: Submitting code coverage to codecov
-          command: |
-            ./node_modules/.bin/nyc report --reporter text-lcov > coverage.lcov
-            curl -s https://codecov.io/bash | bash
-  node-8:
-    <<: *test
-    docker:
-      - image: node:8
-  release:
-    <<: *test
-    steps:
-      - add_ssh_keys
-      - checkout
-      - restore_cache: *restore_cache
-      - run:
-          name: Install dependencies
-          command: |
-            npm install -g @oclif/semantic-release@3 semantic-release@15
-            npm install
-      - run:
-          name: Cutting release
-          command: |
-            semantic-release -e @oclif/semantic-release
-      - save_cache:
-          key: v1-npm-{{checksum ".circleci/config.yml"}}-{{checksum "package-lock.json"}}
-          paths:
-            - ~/cli/node_modules
-            - ~/.npm
-            - /usr/local/lib/node_modules
+          name: Generate code coverage
+          command: './node_modules/.bin/nyc report --reporter=text-lcov'
+      - store_artifacts:
+          path: test-results.xml
+          prefix: tests
+      - store_artifacts:
+          path: coverage
+          prefix: coverage
 
 workflows:
   version: 2
-  "cdt":
+  build_and_test:
     jobs:
-      - node-latest
-      - node-8
-      - release:
-          context: org-global
-          filters:
-            branches: {only: master}
+      - build
+      - test:
           requires:
-            - node-latest
-            - node-8
+            - build
+          filters:
+            branches:
+              only: master
