--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Test
-          command: npm test
+          command: './node_modules/.bin/nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"'
       - run:
           name: Generate code coverage
           command: './node_modules/.bin/nyc report --reporter=text-lcov'
