[CIRCLE_CI]: added config for single job

--- a/.circleci/config_2jobs.yml
+++ b/.circleci/config_2jobs.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build_and_test:
+  build:
     working_directory: ~/mern-starter
     # The primary container is an instance of the first image listed. The job's commands run in this container.
     docker:
@@ -8,6 +8,24 @@ jobs:
       # The secondary container is an instance of the second listed image which is run in a common network where ports exposed on the primary container are available on localhost.
     steps:
       - checkout
+      - run:
+          name: Update npm
+          command: 'sudo npm install -g npm@latest'
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install npm dependencies
+          command: npm install
+      - save_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
+  test:
+    docker:
+      - image: circleci/node:latest
+    steps:
+      - checkout
+      #      needed to add here also as both install and test are different docker instances and need to do same thing again in different instance
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
@@ -37,4 +55,7 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build_and_test
+      - build
+      - test:
+          requires:
+            - build
