--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@oclif/command": "^1.5.19",
     "@oclif/config": "^1.13.3",
     "@oclif/plugin-help": "^2.2.1",
+    "crypto-js": "^3.1.9-1",
     "jshashes": "^1.0.7",
-    "tslib": "^1.10.0",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.22.2",
