--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@oclif/command": "^1.5.19",
     "@oclif/config": "^1.13.3",
     "@oclif/plugin-help": "^2.2.1",
+    "@types/crypto-js": "^3.1.43",
     "crypto-js": "^3.1.9-1",
     "jshashes": "^1.0.7",
     "nyc": "^14.1.1",
