--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@oclif/config": "^1.13.3",
     "@oclif/plugin-help": "^2.2.1",
     "@types/crypto-js": "^3.1.43",
+    "@types/signale": "^1.2.1",
     "crypto-js": "^3.1.9-1",
     "jshashes": "^1.0.7",
     "nyc": "^14.1.1",
+    "signale": "^1.4.0",
     "tslib": "^1.10.0"
   },
   "devDependencies": {
