[CRYPTO]: update README.md
Signed-off-by: ashish <ashishpatel0720@gmail.com>

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "/npm-shrinkwrap.json",
     "/oclif.manifest.json"
   ],
-  "homepage": "https://github.com//cdt",
+  "homepage": "https://github.com/codingtools/cdt",
   "keywords": [
     "cdt",
     "oclif"
