--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/signale": "^1.2.1",
     "crypto-js": "^3.1.9-1",
     "jshashes": "^1.0.7",
+    "minify": "^4.1.3",
     "nyc": "^14.1.1",
     "signale": "^1.4.0",
     "tslib": "^1.10.0"
