--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jshashes": "^1.0.7",
     "minify": "^4.1.3",
     "nyc": "^14.1.1",
+    "ora": "^4.0.2",
     "signale": "^1.4.0",
     "tslib": "^1.10.0"
   },
