--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/codingtools/cdt.git"
+    "url": "https://github.com/codingtools/cdt.git"
   },
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
