[CRYPTO]: added 'jest' for clubbing both together
Signed-off-by: ashish <ashishpatel0720@gmail.com>

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/node": "^12.11.2",
     "chai": "^4.2.0",
     "globby": "^10.0.1",
+    "jest": "^24.9.0",
+    "jest-mock": "^24.9.0",
     "mocha": "^6.2.2",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
