--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@oclif/plugin-help": "^2.2.1",
     "@types/crypto-js": "^3.1.43",
     "@types/signale": "^1.2.1",
+    "axios": "^0.19.0",
     "crypto-js": "^3.1.9-1",
     "jshashes": "^1.0.7",
     "minify": "^4.1.3",
