--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "crypto-js": "^3.1.9-1",
     "jshashes": "^1.0.7",
     "minify": "^4.1.3",
+    "moment": "^2.24.0",
     "nyc": "^14.1.1",
     "ora": "^4.0.2",
     "signale": "^1.4.0",
