--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jshashes": "^1.0.7",
     "minify": "^4.1.3",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "nyc": "^14.1.1",
     "ora": "^4.0.2",
     "signale": "^1.4.0",
