[DATETIME]: added basic functionality for datetime
Signed-off-by: ashish <ashishpatel0720@gmail.com>

--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
   "oclif": {
     "commands": "./lib/commands",
     "bin": "cdt",
+    "macos": {
+      "identifier": "@codingtools/cdt"
+    },
     "plugins": [
       "@oclif/plugin-help",
       "@oclif/plugin-not-found",
