--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "@oclif/plugin-help": "^2.2.1",
     "@oclif/plugin-not-found": "^1.2.3",
     "@oclif/plugin-warn-if-update-available": "^1.7.0",
-    "@types/crypto-js": "^3.1.43",
-    "@types/signale": "^1.2.1",
     "axios": "^0.19.0",
     "chalk": "^2.4.2",
     "crypto-js": "^3.1.9-1",
@@ -36,7 +34,10 @@
     "@oclif/tslint": "^3.1.1",
     "@types/chai": "^4.2.3",
     "@types/mocha": "^5.2.7",
+    "@types/moment-timezone": "^0.5.12",
     "@types/node": "^12.11.2",
+    "@types/crypto-js": "^3.1.43",
+    "@types/signale": "^1.2.1",
     "chai": "^4.2.0",
     "globby": "^10.0.1",
     "mocha": "^6.2.2",
