--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^0.19.0",
     "chalk": "^3.0.0",
     "crypto-js": "^3.1.9-1",
+    "detect-character-encoding": "^0.8.0",
+    "encoding-japanese": "^1.0.30",
     "jshashes": "^1.0.7",
     "minify": "^4.1.3",
     "moment": "^2.24.0",
