--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@oclif/plugin-help": "^2.2.1",
     "@oclif/plugin-not-found": "^1.2.3",
     "@oclif/plugin-warn-if-update-available": "^1.7.0",
+    "avsc": "^5.4.18",
     "axios": "^0.19.0",
     "chalk": "^3.0.0",
     "crypto-js": "^3.1.9-1",
