--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "avsc": "^5.4.18",
     "axios": "^0.19.0",
     "chalk": "^3.0.0",
+    "codecov": "^3.6.5",
     "crypto-js": "^3.1.9-1",
     "detect-character-encoding": "^0.8.0",
     "encoding-japanese": "^1.0.30",
