--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,9 @@ jobs:
           name: Generate code coverage
           command: ./node_modules/.bin/nyc report --reporter=json
       - run:
+          name: moving report to right file
+          command: mv coverage/coverage-final.json coverage/coverage.json
+      - run:
           name: send code coverage to codecov
           command: ./node_modules/.bin/codecov
 
