[CODECOV]: done fix, removed unused igned-off-by: ashish <ashishpatel0720@gmail.com>
Signed-off-by: ashish <ashishpatel0720@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,9 @@ jobs:
           name: Test
           command: npm test
       - run:
+          name: Generate code coverage
+          command: ./node_modules/.bin/nyc report --reporter=json
+      - run:
           name: send code coverage to codecov
           command: ./node_modules/.bin/codecov
 
