--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@ node_modules
 /.idea
 cdt.iml
 **/.DS_Store
-output/*
-!output/.gitkeep
+
+output/*.json
+output/*.avro
+output/*.avsc
+
 coverage/*.json
+
+
