--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -1,4 +1,4 @@
-name: Node.js Package
+name: GithubPublish
 
 on:
   release:
@@ -38,7 +38,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-          scope: '@ashishpatel0720'
+          scope: '@codingtools/cdt'
       - run: npm ci
       - run: npm publish
         env:
