--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,18 +14,12 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Snyk
+      uses: snyk/actions@0.1.1
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
     - run: npm install
     - run: npm run build --if-present
     - run: npm test
       env:
         CI: true
-  security:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          command: test
