[circleci-issue] - codecov added Signed-off-by: Ashish Patel <ashishpatel0720@gmail.com>
Signed-off-by: ashish <ashishpatel0720@gmail.com>

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,5 +20,9 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm test
+    - run: ./node_modules/.bin/nyc report --reporter=json
+    - run: mv coverage/coverage-final.json coverage/coverage.json
+    - run: ./node_modules/.bin/codecov
+
       env:
         CI: true
