--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           node-version: 12
       - run: npm install
+      - run: npm run build --if-present
       - run: ./node_modules/.bin/nyc report --reporter=json
       - run: mv coverage/coverage-final.json coverage/coverage.json
       - name: Upload coverage to Codecov
