[circleci-issue] - codecov added separately3 Signed-off-by: Ashish Patel <ashishpatel0720@gmail.com>
Signed-off-by: ashish <ashishpatel0720@gmail.com>

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,6 +30,7 @@ jobs:
           node-version: 12
       - run: npm install
       - run: npm run build --if-present
+      - run: npm test
       - run: ./node_modules/.bin/nyc report --reporter=json
       - run: mv coverage/coverage-final.json coverage/coverage.json
       - name: Upload coverage to Codecov
