--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "nyc": "^15.1.0",
+    "snyk": "^1.0.0",
     "ora": "^4.0.4",
     "signale": "^1.4.0",
     "test": "^0.6.0",
