[momentjs] - enabledES6 modules import and changed accordingly Signed-off-by: Ashish Patel <ashishpatel0720@gmail.com>
Signed-off-by: ashish <ashishpatel0720@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "strict": true,
     "target": "es2017",
     "sourceMap": true,
-    "composite": true
+    "composite": true,
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*"
