[momentjs] - additional dependency removed
Signed-off-by: Ashish Patel <ashishpatel0720@gmail.com>
Signed-off-by: ashish <ashishpatel0720@gmail.com>

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jshashes": "^1.0.8",
     "json-2-csv": "^3.7.0",
     "minify": "^5.1.1",
-    "moment-timezone": "^0.5.29",
+    "moment": "2.24.0",
+    "moment-timezone": "^0.5.31",
     "nyc": "^15.1.0",
     "ora": "^4.0.4",
     "signale": "^1.4.0",
@@ -40,7 +41,6 @@
     "@oclif/tslint": "^3.1.1",
     "@types/chai": "^4.2.9",
     "@types/mocha": "^7.0.0",
-    "@types/moment-timezone": "^0.5.12",
     "@types/node": "13.9.3",
     "@types/crypto-js": "^3.1.43",
     "@types/signale": "^1.2.1",
