--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,6 +1,8 @@
 # Add 'label1' to any changes within 'example' folder or any subfolders
 documentation: README.md
 
+dependencies: package.*
+
 # Add 'label2' to any file changes within 'example2' folder
 test-changes:
   - test/**/*
