cdt-142 Use ShellJs to create  utilities using shell

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment-timezone": "^0.5.32",
     "nyc": "^15.1.0",
     "ora": "^5.2.0",
+    "shelljs": "^0.8.4",
     "signale": "^1.4.0",
     "snyk": "^1.425.4",
     "test": "^0.6.0",
@@ -45,6 +46,7 @@
     "@types/crypto-js": "^3.1.43",
     "@types/mocha": "^7.0.0",
     "@types/node": "13.9.3",
+    "@types/shelljs": "^0.8.8",
     "@types/signale": "^1.2.1",
     "chai": "^4.2.0",
     "globby": "^10.0.1",
