cdt-141 Add Cron Job support improved with error logging and better functionality

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "chalk": "^3.0.0",
     "codecov": "^3.8.1",
+    "cron-validate": "^1.4.2",
     "cron-validator": "^1.2.1",
     "cronstrue": "^1.110.0",
     "crypto-js": "^4.0.0",
@@ -30,6 +31,7 @@
     "minify": "^6.0.1",
     "moment": "2.29.1",
     "moment-timezone": "^0.5.32",
+    "node-cron": "^3.0.0",
     "nyc": "^15.1.0",
     "ora": "^5.2.0",
     "shelljs": "^0.8.4",
@@ -46,6 +48,7 @@
     "@types/crypto-js": "^3.1.43",
     "@types/mocha": "^7.0.0",
     "@types/node": "13.9.3",
+    "@types/node-cron": "^2.0.3",
     "@types/shelljs": "^0.8.8",
     "@types/signale": "^1.2.1",
     "chai": "^4.2.0",
