cdt-195 - tried to fix using cron-validate new version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,9 @@
     "target": "es2017",
     "sourceMap": true,
     "composite": true,
-    "esModuleInterop": true,
-    "skipLibCheck"   : true,
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*"
-  ],
-  "exclude": ["node_modules/**/*"]
+  ]
 }
