--- a/.github/workflows/autoupdate.yml
+++ b/.github/workflows/autoupdate.yml
@@ -1,12 +1,12 @@
 name: autoupdate
 on:
   # This will trigger on all pushes to all branches.
-  push: {}
+  # push: {}
   # Alternatively, you can only trigger if commits are pushed to certain branches, e.g.:
-  # push:
-  #   branches:
-  #     - master
-  #     - unstable
+  push:
+    branches:
+      - master
+      - release/release-*
 jobs:
   autoupdate:
     name: autoupdate
