--- a/.github/workflows/autoupdate.yml
+++ b/.github/workflows/autoupdate.yml
@@ -5,8 +5,7 @@ on:
   # Alternatively, you can only trigger if commits are pushed to certain branches, e.g.:
   push:
     branches:
-      - master
-      - release/release-*
+      - main
 jobs:
   autoupdate:
     name: autoupdate
