--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "signale": "^1.4.0",
     "snyk": "^1.518.0",
     "test": "^0.6.0",
-    "tslib": "^2.1.0"
+    "tslib": "^2.1.0",
+    "@snyk/protect": "^1.657.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.22.2",
@@ -101,7 +102,7 @@
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif-dev readme && git add README.md",
-    "snyk-protect": "snyk protect",
+    "snyk-protect": "snyk-protect",
     "prepare": "npm run snyk-protect"
   },
   "types": "lib/index.d.ts",
